# aws-ci-buddy

./: .drone.yml  Cargo.toml
src/: error.rs  lib.rs  main.rs
src/aws/: ecr.rs  mod.rs
src/aws/s3/: cp.rs  ls.rs  mod.rs
