[package]
name = "aws-ci-buddy"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
rusoto_core = "0.43.0"
rusoto_ecr = "0.43.0"
rusoto_s3 = "0.43.0"
tokio = {version="0.2", features=["full"]}
clap = "2"
url = "2"
tokio-util = { version ="0.3", features=["full"]}